...
    <string name="action_log_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="club">Club</string>
    <string name="student">Student</string>

    <!-- Error Messages to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_not_verified">Email not verified, new verification email sent</string>
    <string name="error_no_email_domain_match">This email address is invalid for this school
    </string>
    <string name="error_wrong_password">This password is incorrect</string>
    <string name="error_password_short">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_exists">This email already exists</string>
    <string name="error_email_not_exists">This email does not exist</string>
    <string name="error_log_in_failed">Log in failed</string>
    <string name="error_register_failed">Registration Failed</string>

    <string name="title_activity_login">Log in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="error_reset_password">Error sending reset password email</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_logout">Log out</string>
    <string name="logout_confirmation">"Are you sure you want to log out?"</string>

...
    <string name="report">Report</string>
    <string name="edit_event">Edit</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="USER_PREFS_FILE">USER_PREFS_FILE</string>
    <string name="RememberAccess">RememberAccess</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
...
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
...
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="remember_me">Remember me on this device</string>
</resources>
